Override (nested) postcss from 5.2.18 to 7.0.39
PostCSS maintains plugin backwards compatibility to v7.0.0

https://github.com/postcss/postcss/releases/tag/6.0.0

Breaking changes (compatible):

* Drops Node.js v0.12
* Drops PostCSS v4 deprecated APIs

https://github.com/postcss/postcss/releases/tag/7.0.0

Breaking changes (compatible):

* Drops Node.js v4 and v9

https://github.com/postcss/postcss/releases/tag/8.0.0

Breaking changes (incompatible):

* Drops Node.js v6, v8, v11 and v13
• Drops `postcss.plugin()` API

--- a/package.json
+++ b/package.json
@@ -107,5 +107,16 @@
     "stylelint-order": "^6.0.1",
     "vinyl": "^3.0.0",
     "wait-on": "^7.0.1"
+  },
+  "overrides": {
+    "postcss-unmq": {
+      "postcss": "^7"
+    },
+    "postcss-unopacity": {
+      "postcss": "^7"
+    },
+    "postcss-unrgba": {
+      "postcss": "^7"
+    }
   }
 }
