--- a/src/govuk/components/task-list/task-list.yaml
+++ b/src/govuk/components/task-list/task-list.yaml
@@ -11,7 +11,7 @@ params:
   - name: title.text
     type: string
     required: true
-    description: If `html` is set, this is not required. Text to use within the each title. If `html` is provided, the `text` argument will be ignored.
+    description: If `html` is set, this is not required. Text to use within the title. If `html` is provided, the `text` argument will be ignored.
   - name: title.html
     type: string
     required: true
@@ -23,11 +23,11 @@ params:
   - name: status.text
     type: string
     required: true
-    description: If `html` is set, this is not required. Text to use within the each value. If `html` is provided, the `text` argument will be ignored.
+    description: If `html` is set, this is not required. Text to use within the value. If `html` is provided, the `text` argument will be ignored.
   - name: status.html
     type: string
     required: true
-    description: If `text` is set, this is not required. HTML to use within the each value. If `html` is provided, the `text` argument will be ignored.
+    description: If `text` is set, this is not required. HTML to use within the value. If `html` is provided, the `text` argument will be ignored.
   - name: status.classes
     type: string
     required: false
@@ -35,7 +35,7 @@ params:
   - name: url.text
     type: string
     required: false
-    description: If `html` is set, this is not required. Text to use within the each title. If `html` is provided, the `text` argument will be ignored.
+    description: If `html` is set, this is not required. Text to use within the title. If `html` is provided, the `text` argument will be ignored.
   - name: url.html
     type: string
     required: false
