--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "autoprefixer": "^9.8.8",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.14",
+    "cssnano-preset-default": "^5.2.13",
     "del": "^7.0.0",
     "front-matter": "^4.0.2",
     "glob": "^8.1.0",
