--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "nunjucks": "^3.2.3",
     "plugin-error": "^2.0.1",
     "postcss": "^8.4.21",
+    "postcss-load-config": "^4.0.1",
     "postcss-pseudo-classes": "^0.2.1",
     "postcss-scss": "^4.0.6",
     "postcss-unmq": "^1.0.2",
@@ -111,7 +112,6 @@
     "stylelint": "^14.16.1",
     "stylelint-config-gds": "^0.2.0",
     "stylelint-order": "^6.0.2",
-    "vinyl": "^3.0.0",
     "wait-on": "^7.0.1"
   },
   "overrides": {
