--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "autoprefixer": "^9.8.8",
+    "chalk": "^5.2.0",
     "cssnano": "^5.1.15",
     "cssnano-preset-default": "^5.2.13",
     "del": "^7.0.0",
