--- a/.github/workflows/actions/install-node/action.yml
+++ b/.github/workflows/actions/install-node/action.yml
@@ -11,7 +11,11 @@ runs:
       with:
         # Restore `node_modules` cache (unless packages change)
         key: npm-install-cache-${{ runner.os }}-${{ hashFiles('package-lock.json', '**/package.json') }}
-        path: node_modules
+        path: |
+          node_modules
+          app/node_modules
+          docs/examples/*/node_modules
+          package/node_modules
 
     - name: Setup Node.js
       uses: ./.github/workflows/actions/setup-node
