--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,9 @@ on:
           - macos-latest
           - ubuntu-latest
           - windows-latest
+      types:
+        description: Check type declarations
+        type: boolean
 
 concurrency:
   group: tests-${{ github.head_ref || github.run_id }}
@@ -50,6 +53,10 @@ jobs:
 
       - name: Build
         uses: ./.github/workflows/actions/build
+
+      - name: Type declarations (optional)
+        if: github.event.inputs.types == 'true'
+        run: npm run build:types
 
   lint:
     name: ${{ matrix.task.description }}
