--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "@percy/puppeteer": "^2.0.2",
     "@percy/sdk-utils": "^1.20.0",
     "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "cheerio": "^1.0.0-rc.12",
     "editorconfig-checker": "^5.0.1",
     "eslint": "^8.34.0",
